--- a/goldecon+/.project
+++ b/goldecon+/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>goldecon-SE_pack</name>
+	<name>goldecon+</name>
 	<comment></comment>
 	<projects>
 	</projects>
