Revert "General housekeeping - Tidying the github up."
This reverts commit 2c65c15f441d58b697b3ce015c39b22fa544a562.

--- a/goldecon-SE_pack/.project
+++ b/goldecon-SE_pack/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>goldecon+</name>
+	<name>goldecon-SE_pack</name>
 	<comment></comment>
 	<projects>
 	</projects>
