Current dev status of 1.7_RC1 - Current work is on the updater. Not done yet!

--- a/goldecon+/plugin.yml
+++ b/goldecon+/plugin.yml
@@ -1,6 +1,6 @@
 name: goldeconplus
 main: org.goldecon.goldeconplus.Goldecon
-version: 1.7_alpha2
+version: 1.7_RC1
 authors: [Stoolbend, boardinggamer, Kierrow]
 description: A simple economy based around gold nuggets.
 permissions:
